Run the code outside the process

--- a/example/template/include.tt
+++ b/example/template/include.tt
@@ -1,11 +1,2 @@
 Include:
-[% INCLUDE "list.tt" -%]
-[% INCLUDE "list.tt" -%]
-[% INCLUDE "list.tt" -%]
-[% INCLUDE "list.tt" -%]
-[% INCLUDE "list.tt" -%]
-[% INCLUDE "list.tt" -%]
-[% INCLUDE "list.tt" -%]
-[% INCLUDE "list.tt" -%]
-[% INCLUDE "list.tt" -%]
-[% INCLUDE "list.tt" -%]
+[% INCLUDE "tiny.tt" -%]
